# user-onboarding-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_output.txt  test_output_retry.txt
alembic/: env.py
app/api/v1/: accounts.py  auth.py  router.py  routes_test.py  transactions.py
app/auth/: dependencies.py
app/auth/OTP/: otp_exceptions.py  otp_service.py  rate_limit.py  service.py
app/core/: securities.py
app/core/security/: otp.py  otp_keys.py  verify_rate_limit.py
app/core/security/hashing/: base.py  issued_secrets.py  otp.py  password.py  pin.py
app/db/models/: __init__.py  account.py  user.py
app/db/models/User/: user_auth.py  user_core.py  user_kyc.py
app/domain/auth/: otp_purpose.py
app/domain/user/: preuser_onboarding.py
app/interegation/SMS/: base.py  console.py
app/orchestration/: UserOnboarding.py  signup.py
app/repository/account/: account.py
app/repository/user/: pre_user.py
app/schemas/: account_schemas.py  transactions.py
app/schemas/User/: kyc.py  set_password.py  signup.py
app/services/OTP/: bruteforce.py  issue_otp.py  otp_exceptions.py  verify_otp.py
app/services/User/: credentials.py  otp_service.py  preuser_credentials.py  signup.py
app/services/account/: create_limited_account.py  upgrade.py
tests/: confest.py  conftest.py
tests/e2e/: confest.py  conftest.py  test_full_user_onboarding.py
tests/factories/: account_factory.py  user_factory.py
tests/integration/: confest.py  conftest.py
tests/integration/auth/: test_dependencies.py  test_signup_phone.py
tests/integration/services/: test_account_service.py
tests/unit/Core/hashing/: test_password.py
tests/unit/auth/OTP/: send_otp.py  test_verify_otp.py
tests/unit/services/User/OTP/: test_send_otp.py
