[project]
name = "finguard"
version = "0.1.0"
description = "FinTech backend that handles atomic money movement, fraud scoring, and audit trails!"
authors = [
    {name = "Harshit"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "celery (==5.3.6)",
    "redis (==5.0.1)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2,bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "opentelemetry-api (>=1.38.0,<2.0.0)",
    "opentelemetry-sdk (>=1.38.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)",
    "httpx (==0.27.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "docker (>=7.1.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "finguard", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flower (==2.0.1)",
    "pytest (>=9.0.1,<10.0.0)"
]
